# Dancore-Engine

./: .gitignore  CMakeLists.txt  README.md  build 2.sh
.cache/clangd/index/: DX12Renderer.cpp.C2FE4F61964F7742.idx  DX12Renderer.h.81249DF079A44D3E.idx  EditorWindow.cpp.0413450A206A7A98.idx  EditorWindow.h.6D1C65FDC43F21F3.idx  GLRenderer.cpp.3A32BA270DC9B307.idx  GLRenderer.h.D8B9F6FBEBDCED89  GLRenderer.h.D8B9F6FBEBDCED89.idx  IAppWindow.h.6C96E7291F90AD19.idx  IRenderer.h.B776A3A98FF68930  IRenderer.h.B776A3A98FF68930.idx  MainWindow.cpp.0145AB90554015D1.idx  MainWindow.h.CCF2774B576E6BE6.idx  ViewportWindow.cpp.F18516C5E655D725.idx  ViewportWindow.h.9AF4A705CEBE9245.idx  VulkanRenderer.cpp.586CA2525A686FCB.idx  VulkanRenderer.h.B43AFAE9BEE937EA.idx  WindowManager.cpp.0C4591591E5EE29A.idx  WindowManager.h.A7086AA07B05A004.idx  imconfig.h.A1DE247687D9421D.idx  imgui.cpp.B9A9016717D9C117.idx  imgui.h.29359716689E2173.idx  imgui_demo.cpp.59C2C3E02504E1C0.idx  imgui_draw.cpp.6BD0E329F83D9511.idx  imgui_impl_opengl3.cpp.DEEFC5906C956773.idx  imgui_impl_opengl3.h.F92CA6178F9001B1.idx  imgui_impl_opengl3_loader.h.3B9FBE7D09239BE6.idx  imgui_impl_sdl3.cpp.D09B563C30B1AB6B.idx  imgui_impl_sdl3.h.A9353C285144D421.idx  imgui_impl_sdlrenderer3.cpp.25A0B3B42452DCFE.idx  imgui_impl_sdlrenderer3.h.203E13B2F2B7EE4B.idx  imgui_internal.h.FAFE7F83F35DF6DD.idx  imgui_tables.cpp.DCF8A8667EDEF0D6.idx  imgui_widgets.cpp.02F2D72A64F49872.idx  imstb_rectpack.h.5D58334856DA7C0B.idx  imstb_textedit.h.3AC055E1C027218F.idx  imstb_truetype.h.B67F2B989BAEE1C2.idx  json.hpp.03DBB989B0A6F11C.idx  main.cpp.10E85C50F69CC0CF.idx
configs/: startup.json  windows.json
engine/interfaces/WindowManager/code/: WindowManager.cpp
engine/interfaces/WindowManager/interface/: WindowManager.h
engine/interfaces/windows/: IAppWindow.h
engine/interfaces/windows/EditorWindow/code/: EditorWindow.cpp
engine/interfaces/windows/EditorWindow/interface/: EditorWindow.h
engine/interfaces/windows/MainWindow/code/: MainWindow.cpp
engine/interfaces/windows/MainWindow/interface/: MainWindow.h
engine/interfaces/windows/ViewportWindow/code/: ViewportWindow.cpp
engine/interfaces/windows/ViewportWindow/interface/: ViewportWindow.h
engine/render/dx12/: DX12Renderer.cpp  DX12Renderer.h
engine/render/interfaces/: IRenderer.h
engine/render/opengl/: GLRenderer.cpp  GLRenderer.h
engine/render/vulkan/: VulkanRenderer.cpp  VulkanRenderer.h
main_files/: main 2.cpp
scripts/: development_log.md  setup_libs.ps1  setup_libs.sh
